--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Apontapp</string>
     <string name="title_activity_home">Apontapp</string>
+    <string name="title_activity_products">ProductsActivity</string>
 </resources>
