--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Apontapp</string>
     <string name="title_activity_home">Apontapp</string>
     <string name="title_activity_products">ProductsActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
